==> samirafayez/ITI_Projects/STM32_Drivers/SourceFiles/LCD.c <==
#include "std_defines.h"
#include "bit_math.h"
#include "02_LCD/LCD.h"
#include "02_LCD/LCD_prv.h"
#include "02_LCD/LCD_Cfg.h"
#include "01_GPIO/GPIO.h"
#include "00_Scheduler/Scheduler.h"
#define LCD_FunctionSet 0b00110000
#define LCD_DisplayControl 0b00001000
#define LCD_ClearScreenMASK 0b00000001
#define LCD_EntryModeSetMASK 0b00000110

void LCD_vidInit(void)
{

	u8 loc_u8EnableValue = 0;

	switch(LCD_enuInitState)
	{
	case Lcd_enuStart:
		Lcd_vidPinInit();
		LCD_enuInitState++;
		break;

	case Lcd_enuFunctionSet:
		GPIO_ReadPinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, &loc_u8EnableValue);
		if(!loc_u8EnableValue)
		{
			LCD_u8Command = 0b00111000;
			//LCD_u8Command = LCD_FunctionSet | (LCD_strCfg.LCD_tstrOperation.LCD_enuLinesNumber<<3) | (LCD_strCfg.LCD_tstrOperation.LCD_enuFontCfg<<2) ;
			LCD_vidSendCommand(LCD_u8Command);
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_HIGH);
		}
		else
		{
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_LOW);
			LCD_enuInitState++;
		}

		break;

	case Lcd_enuDisplayControl:
		GPIO_ReadPinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, &loc_u8EnableValue);
		if(!loc_u8EnableValue)
		{
			LCD_u8Command = 0b00001110;
			//LCD_u8Command = LCD_DisplayControl | (LCD_strCfg.LCD_tstrOperation.LCD_strBacklight<<2) | (LCD_strCfg.LCD_tstrOperation.LCD_strCursor<<1) | (LCD_strCfg.LCD_tstrOperation.LCD_strBlinkingCursor<<0);
			LCD_vidSendCommand(LCD_u8Command);
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_HIGH);
		}
		else
		{
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_LOW);
			LCD_enuInitState++;
		}

		break;
	case Lcd_enuClear:
		GPIO_ReadPinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, &loc_u8EnableValue);
		if(!loc_u8EnableValue)
		{
			LCD_u8Command = LCD_ClearScreenMASK;
			LCD_vidSendCommand(LCD_u8Command);
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_HIGH);
		}
		else
		{
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_LOW);
			LCD_enuInitState++;
		}

		break;
	case Lcd_enuEntryMode:
		GPIO_ReadPinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, &loc_u8EnableValue);
		if(!loc_u8EnableValue)
		{
			LCD_u8Command = LCD_EntryModeSetMASK ;
			LCD_vidSendCommand(LCD_u8Command);
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_HIGH);
		}
		else
		{
			GPIO_WritePinValue(LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Port, LCD_strCfg.LCD_tstrPins.LCD_EnablePin.LCD_Pin, GPIO_LOW);
			LCD_enuInitState++;
		}

		break;
	default:

		break;
	}


}

LCD_tenuErrorStatus LCD_enuSendData (u8 Copy_u8Data)
{
	LCD_tenuErrorStatus Loc_u8State = LCD_enuOk;
	if(LCD_enuRequest == Lcd_enuNoRequest)
	{
		LCD_u8Data = Copy_u8Data;
		LCD_enuRequest = Lcd_enuWritingProcess;
		Lcd_enuWriteProcess = Lcd_enuWriteData;

	}
	else if(LCD_enuRequest == Lcd_enuWritingProcess)
	{
		Loc_u8State = LCD_enuProcessing;
	}
	else
	{
		Loc_u8State = LCD_enuBusy;
	}



	return Loc_u8State;
}

LCD_tenuErrorStatus LCD_enuSendCommand (u8 Copy_u8Command)
{
	LCD_tenuErrorStatus Loc_u8State = LCD_enuOk;
	if(LCD_enuRequest == Lcd_enuNoRequest)
	{
		LCD_u8Command = Copy_u8Command;
		LCD_enuRequest = Lcd_enuSendingCommand;
		Lcd_enuSendCommand = Lcd_enuSendCommand_Default;

	}
	else if(LCD_enuRequest == Lcd_enuSendingCommand)
	{
		Loc_u8State = LCD_enuProcessing;
	}
	else
	{
		Loc_u8State = LCD_enuBusy;
	}


	return Loc_u8State;
}

LCD_tenuErrorStatus LCD_enuGotoXY (u8 Copy_u8XPos, u8 Copy_u8YPos)
{
	LCD_tenuErrorStatus Loc_u8State = LCD_enuOk;

	if(LCD_enuRequest == Lcd_enuNoRequest)
	{

		LCD_u8_X = Copy_u8XPos;
		LCD_u8_Y = Copy_u8YPos;
		LCD_enuRequest = Lcd_enuSendingCommand;
		Lcd_enuSendCommand = Lcd_enuGotoXY;

	}
	else if(LCD_enuRequest == Lcd_enuSendingCommand)
	{
		Loc_u8State = LCD_enuProcessing;
	}
	else
	{
		Loc_u8State = LCD_enuBusy;
	}


	return Loc_u8State;
}

LCD_tenuErrorStatus LCD_enuWriteString (char* Add_pchString)
{
	LCD_tenuErrorStatus Loc_u8State = LCD_enuOk;
	if(LCD_enuRequest == Lcd_enuNoRequest)
	{
		LCD_u8Index = 0;
		LCD_StringValue = Add_pchString;
		LCD_enuRequest = Lcd_enuWritingProcess;
		Lcd_enuWriteProcess = Lcd_enuWriteString;

	}
	else if(LCD_enuRequest == Lcd_enuWritingProcess)
	{
		Loc_u8State = LCD_enuProcessing;
	}
	else
	{
		Loc_u8State = LCD_enuBusy;
	}





	return Loc_u8State;
}
